# radiology-clip-mini

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
configs/: tiny.yaml
notebooks/: 01_demo_radiology_clip_mini.ipynb
scripts/: export_minimal_weights.py  make_splits.py
src/radiology_clip_mini.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rclip/: data.py  eval.py  models.py  text.py  train.py  utils.py  viz.py
tests/: test_imports.py
