[project]
name = "radiology-clip-mini"
version = "0.1.0"
description = "Minimal CLIP-style retrieval on IU X-Ray"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203","W503"]
